api keys as path params in routes
